Bug 1839572 - Fix number input value sanitization. r=dom-core,edgar, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D183055